Q and intelliSense co-exist

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -223,6 +223,10 @@ aws.settings.codewhisperer.group.plugin_settings=Plugin Settings
 aws.settings.codewhisperer.group.q_chat=Chat
 aws.settings.codewhisperer.include_code_with_reference=Include suggestions with code references
 aws.settings.codewhisperer.include_code_with_reference.tooltip=When checked, Amazon Q will include suggestions with code references. If you authenticate through IAM Identity Center, this setting is controlled by your Amazon Q Developer Pro administrator. <a href="https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/code-reference.html">Learn more<a/>
+aws.settings.codewhisperer.inline.suggestion_priority.text=Tab to prioritize accepting suggestions from
+aws.settings.codewhisperer.inline.suggestion_priority.intellisense.text=JetBrains
+aws.settings.codewhisperer.inline.suggestion_priority.q.text=Amazon Q
+aws.settings.codewhisperer.inline.suggestion_priority.tooltip=Tip: Alternatively, use \u2325 \u21E5 to accept Amazon Q suggestions and \u23CE to accept JetBrains suggestions.
 aws.settings.codewhisperer.project_context=Workspace index
 aws.settings.codewhisperer.project_context.tooltip=This feature is in BETA. When you add @workspace to your questions in Amazon Q chat, Amazon Q will index your open workspace files locally to use as context for its response. Extra CPU usage is expected while indexing a workspace. This will not impact Amazon Q features or your IDE, but you may manage CPU usage by setting the number of local threads below.
 aws.settings.codewhisperer.project_context_gpu=Workspace index uses GPU
@@ -845,6 +849,9 @@ codewhisperer.gettingstarted.panel.learn_more=Learn more
 codewhisperer.gettingstarted.panel.learn_more.with.q=Learn more about <a href = "https://aws.amazon.com/q/">Amazon Q</a> and <a href ="https://aws.amazon.com/codewhisperer">Codewhisperer  </a>
 codewhisperer.gettingstarted.panel.licence_comment=Already have a license?
 codewhisperer.gettingstarted.panel.login_button=Use for free, no AWS account required
+codewhisperer.inline.navigate.next=Navigate to Next Suggestion
+codewhisperer.inline.accept=Accept Suggestion
+codewhisperer.inline.navigate.previous=Navigate to Previous Suggestion
 codewhisperer.language.error={0} is currently not supported by Amazon Q
 codewhisperer.learn_page.banner.dismiss=Dismiss
 codewhisperer.learn_page.banner.message.new_user=You can always return to this page by clicking "Learn" in the Amazon Q status bar menu.
@@ -872,8 +879,8 @@ codewhisperer.notification.remote.ide_unsupported.title=Amazon Q inline suggesti
 codewhisperer.notification.usage_limit.codescan.warn.content=Amazon Q: You have reached the monthly limit for project scans.
 codewhisperer.notification.usage_limit.codesuggestion.warn.content=You have reached the monthly fair use limit of code recommendations.
 codewhisperer.popup.button.accept=<html><center>&nbsp;Insert&nbsp;Code&nbsp;<br/><font color="{0}">\u21E5</font></center></html>
-codewhisperer.popup.button.next=<html><center>Next<br/><font color="{0}">&rarr;</font></center></html>
-codewhisperer.popup.button.prev=<html><center>Previous<br/><font color="{0}">&larr;</font></center></html>
+codewhisperer.popup.button.next=<html><center>Next<br/><font color="{0}">{1}</font></center></html>
+codewhisperer.popup.button.prev=<html><center>Previous<br/><font color="{0}">{1}</font></center></html>
 codewhisperer.popup.import_info=<html><p style="margin: 0; width: 210px">If you insert code, "{0}"{2, choice, 0#|1# and {1} other import|2# and {1} other imports} will also be added.</p></html>
 codewhisperer.popup.no_recommendations=No Amazon Q recommendations available at this point
 codewhisperer.popup.pagination_info=Loading additional Amazon Q suggestions...
