--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -47,7 +47,7 @@ amazonqFeatureDev.chat_message.uploading_code=Uploading code ...
 amazonqFeatureDev.code_generation.error_message=I'm sorry, I ran into an issue while trying to generate your code. Please try again.
 amazonqFeatureDev.code_generation.failed_generation=Code generation failed
 amazonqFeatureDev.code_generation.generating_code=Generating code ...
-amazonqFeatureDev.code_generation.generated_code=Code generation done. You can find it below:
+amazonqFeatureDev.code_generation.generated_code=Here's your code. You can choose a file to see a diff with the changes I'm proposing.
 amazonqFeatureDev.code_generation.iteration_counts=You have {0} out of {1} code iterations remaining.
 amazonqFeatureDev.code_generation.iteration_limit.error_text=Sorry, you've reached the quota for number of iterations on code generation. You can insert this code in your files or discuss a new plan. For more information on quotas, see the [Amazon Q Developer documentation](https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/software-dev.html#quotas).
 amazonqFeatureDev.code_generation.no_file_changes=Unable to generate any file changes
