fix version update logistic and q-intellij conflict options

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -223,10 +223,6 @@ aws.settings.codewhisperer.group.plugin_settings=Plugin Settings
 aws.settings.codewhisperer.group.q_chat=Chat
 aws.settings.codewhisperer.include_code_with_reference=Include suggestions with code references
 aws.settings.codewhisperer.include_code_with_reference.tooltip=When checked, Amazon Q will include suggestions with code references. If you authenticate through IAM Identity Center, this setting is controlled by your Amazon Q Developer Pro administrator. <a href="https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/code-reference.html">Learn more<a/>
-aws.settings.codewhisperer.inline.suggestion_priority.text=Tab to prioritize accepting suggestions from
-aws.settings.codewhisperer.inline.suggestion_priority.intellisense.text=JetBrains
-aws.settings.codewhisperer.inline.suggestion_priority.q.text=Amazon Q
-aws.settings.codewhisperer.inline.suggestion_priority.tooltip=Tip: Alternatively, use \u2325 \u21E5 to accept Amazon Q suggestions and \u23CE to accept JetBrains suggestions.
 aws.settings.codewhisperer.project_context=Workspace index
 aws.settings.codewhisperer.project_context.tooltip=This feature is in BETA. When you add @workspace to your questions in Amazon Q chat, Amazon Q will index your open workspace files locally to use as context for its response. Extra CPU usage is expected while indexing a workspace. This will not impact Amazon Q features or your IDE, but you may manage CPU usage by setting the number of local threads below.
 aws.settings.codewhisperer.project_context_gpu=Workspace index uses GPU
@@ -851,6 +847,7 @@ codewhisperer.gettingstarted.panel.licence_comment=Already have a license?
 codewhisperer.gettingstarted.panel.login_button=Use for free, no AWS account required
 codewhisperer.inline.navigate.next=Navigate to Next Suggestion
 codewhisperer.inline.accept=Accept Suggestion
+codewhisperer.inline.force.accept=Force Accept Suggestion
 codewhisperer.inline.navigate.previous=Navigate to Previous Suggestion
 codewhisperer.language.error={0} is currently not supported by Amazon Q
 codewhisperer.learn_page.banner.dismiss=Dismiss
@@ -874,6 +871,9 @@ codewhisperer.notification.custom.not_available=Selected Amazon Q customization 
 codewhisperer.notification.custom.simple.button.got_it=Got it
 codewhisperer.notification.custom.simple.button.select_another_customization=Select another customization
 codewhisperer.notification.custom.simple.button.select_customization=Select customization
+codewhisperer.notification.inline.shortcut_config.content=Check out the default and customize in the keymap settings.
+codewhisperer.notification.inline.shortcut_config.title=Configurable Amazon Q suggestion shortcuts
+codewhisperer.notification.inline.shortcut_config.open_setting=Open keymap settings
 codewhisperer.notification.remote.ide_unsupported.message=Please update your IDE backend to a 2023.3 or later version to continue using Amazon Q inline suggestions.
 codewhisperer.notification.remote.ide_unsupported.title=Amazon Q inline suggestion not supported in this IDE version
 codewhisperer.notification.usage_limit.codescan.warn.content=Amazon Q: You have reached the monthly limit for project scans.
