clean up for PR

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -759,6 +759,8 @@ codemodernizer.toolwindow.transformation.progress.running_time=Running time: {0}
 codewhisperer.actions.connect_github.title=Connect with Us on GitHub
 codewhisperer.actions.open_settings.title=Open Settings
 codewhisperer.actions.send_feedback.title=Send Feedback
+codewhisperer.actions.switch_to_marketplace.progress.title=Switching to marketplace version
+codewhisperer.actions.switch_to_marketplace.title=Switch Back to Marketplace
 codewhisperer.actions.view_documentation.title=View Documentation
 codewhisperer.codescan.apply_fix_button_label=Apply fix
 codewhisperer.codescan.apply_fix_button_tooltip=Apply suggested fix
@@ -1501,6 +1503,10 @@ loading_resource.still_loading=Resources are still loading
 plugin.incompatible.fix=Disable incompatible plugins and restart IDE
 plugin.incompatible.message=The plugin versions for Amazon Q, AWS Toolkit, and AWS Toolkit Core must match or conflicts may occur.
 plugin.incompatible.title=AWS Plugin Incompatibility
+q.beta.notification.end.title="Amazon Q current beta period ended"
+q.beta.notification.end.message="The current beta period has ended on {0}, please switch to the marketplace version to continue using Amazon Q."
+q.beta.notification.welcome.title="Welcome to Amazon Q Plugin Beta"
+q.beta.notification.welcome.message="Thank you for participating in Amazon Q beta plugin testing. Plugin auto-update is always turned on to ensure the best beta experience."
 q.connection.disconnected=You don't have access to Amazon Q. Please authenticate to get started.
 q.connection.expired=Your Amazon Q session has timed out. Re-authenticate to continue.
 q.connection.invalid=You don't have access to Amazon Q. Please authenticate to get started.
