--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -553,6 +553,7 @@ code.aws.workspaces=Amazon CodeCatalyst
 code.aws.workspaces.short=Dev Environments
 codemodernizer.builderrordialog.description.title=Error occurred when building your project
 codemodernizer.chat.form.user_selection.item.choose_module=Choose a module to transform
+codemodernizer.chat.form.user_selection.item.choose_skip_tests_flag=Choose to skip tests
 codemodernizer.chat.form.user_selection.item.choose_target_version=Choose the target code version
 codemodernizer.chat.form.user_selection.title=Q - Code transformation
 codemodernizer.chat.message.absolute_path_detected=I detected {0} potential absolute file path(s) in your {1} file: **{2}**. Absolute file paths might cause issues when I build your code. Any errors will show up in the build log.
@@ -604,6 +605,7 @@ codemodernizer.chat.message.result.partially_success=I upgraded part of your cod
 codemodernizer.chat.message.result.success=I successfully upgraded your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated.
 codemodernizer.chat.message.result.zip_too_large=Sorry, your project size exceeds the Amazon Q Code Transformation upload limit of 2GB.
 codemodernizer.chat.message.resume_ongoing=I'm still transforming your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
+codemodernizer.chat.message.skip_tests=Amazon Q uses 'mvn verify' to build your project. You can skip running tests to reduce the build time.
 codemodernizer.chat.message.transform_begin=I'm starting to transform your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.transform_cancelled_by_user=I cancelled your transformation. If you want to start another transformation, choose **Start a new transformation**.
 codemodernizer.chat.message.transform_in_progress=If I run into any issues, I might pause the transformation to get input from you on how to proceed.
