Update more customer facing texts and doc link

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -42,13 +42,13 @@ amazonqFeatureDev.chat_message.closed_session=Okay, I've ended this chat session
 amazonqFeatureDev.chat_message.requesting_changes=Requesting changes ...
 amazonqFeatureDev.chat_message.start_code_generation=Okay, I'll generate code for that. This might take a few minutes.\n\nYou can navigate away from this chat, but please keep this tab open. I'll notify you when I'm done.
 amazonqFeatureDev.chat_message.start_code_generation_retry=Okay, I'll generate new code. This might take a few minutes.\n\nYou can navigate away from this chat, but please keep this tab open. I'll notify you when I'm done.
-amazonqFeatureDev.chat_message.uploading_code=Uploading code ...
+amazonqFeatureDev.chat_message.uploading_code=Uploading code...
 amazonqFeatureDev.code_generation.error_message=I'm sorry, I ran into an issue while trying to generate your code. Please try again.
 amazonqFeatureDev.code_generation.failed_generation=Code generation failed
 amazonqFeatureDev.code_generation.generating_code=Generating code ...
-amazonqFeatureDev.code_generation.iteration_counts=Would you like me to add this code to your project, or provide feedback for new code? You have {0} out of {1} code iterations remaining.
+amazonqFeatureDev.code_generation.iteration_counts=Would you like me to add this code to your project, or provide feedback for new code? You have {0} out of {1} code generations left.
 amazonqFeatureDev.code_generation.iteration_limit.error_text=Sorry, you've reached the quota for number of iterations on code generation. You can insert this code in your files or discuss a new plan. For more information on quotas, see the [Amazon Q Developer documentation](https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/software-dev.html#quotas).
-amazonqFeatureDev.code_generation.iteration_zero=Would you like me to add this code to your files?
+amazonqFeatureDev.code_generation.iteration_zero=Would you like me to add this code to your project?
 amazonqFeatureDev.code_generation.no_file_changes=Unable to generate any file changes
 amazonqFeatureDev.code_generation.no_retries.error_message=I'm sorry, I'm having trouble generating your code and can't continue at the moment. Please try again later, and share feedback to help me improve.
 amazonqFeatureDev.code_generation.notification_message=Your code suggestions from Amazon Q are ready to review
@@ -58,7 +58,7 @@ amazonqFeatureDev.code_generation.provide_code_feedback=How can I improve the co
 amazonqFeatureDev.code_generation.updated_code=Okay, I updated your code files. Would you like to work on another task?
 amazonqFeatureDev.content_length.error_text=The folder you selected is too large for me to use as context. Please choose a smaller folder to work on. For more information on quotas, see the [Amazon Q Developer documentation](https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/software-dev.html#quotas). 
 amazonqFeatureDev.error_text=Sorry, we encountered a problem when processing your request.
-amazonqFeatureDev.example_text=You can use /dev to:\n- Add a new feature or logic\n- Write tests\n- Fix a bug in your project\n- Generate a README for a file, folder, or project\n\nTo learn more, visit the [Amazon Q User Guide](https://docs.aws.amazon.com/amazonq/latest/aws-builder-use-ug/getting-started.html)
+amazonqFeatureDev.example_text=You can use /dev to:\n- Add a new feature or logic\n- Write tests\n- Fix a bug in your project\n- Generate a README for a file, folder, or project\n\nTo learn more, visit the [Amazon Q Developer User Guide](https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/software-dev.html)
 amazonqFeatureDev.exception.conversation_not_found=I'm sorry, I'm having technical difficulties at the moment. Please try again.
 amazonqFeatureDev.exception.export_parsing_error=I'm sorry, I'm having trouble producing your code. Please try again.
 amazonqFeatureDev.exception.guardrails=I'm sorry, I'm having trouble generating your code. Please try again.
@@ -73,22 +73,22 @@ amazonqFeatureDev.exception.upload_code=I'm sorry, I couldn't upload your worksp
 amazonqFeatureDev.follow_instructions_for_authentication=Follow instructions to re-authenticate ...
 amazonqFeatureDev.follow_up.close_session=No, thanks
 amazonqFeatureDev.follow_up.incorrect_source_folder=The folder you chose isn't in your open workspace folder. You can add this folder to your workspace, or choose a folder in your open workspace.
-amazonqFeatureDev.follow_up.insert_code=Insert code
+amazonqFeatureDev.follow_up.insert_code=Accept code
 amazonqFeatureDev.follow_up.modified_source_folder=Changed source root to: {0}
 amazonqFeatureDev.follow_up.modify_source_folder=Select files for context
 amazonqFeatureDev.follow_up.new_task=Yes, I have another task
-amazonqFeatureDev.follow_up.provide_feedback_and_regenerate=Provide feedback to regenerate
+amazonqFeatureDev.follow_up.provide_feedback_and_regenerate=Provide feedback & regenerate
 amazonqFeatureDev.follow_up.retry=Retry
 amazonqFeatureDev.follow_up.send_feedback=Send feedback
 amazonqFeatureDev.no_retries.error_text=I'm sorry, I'm having technical difficulties and can't continue at the moment. Please try again later, and share feedback to help me improve.
-amazonqFeatureDev.placeholder.additional_improvements=Provide input on additional improvements
-amazonqFeatureDev.placeholder.after_code_generation=Select an option above to proceed
+amazonqFeatureDev.placeholder.additional_improvements=Choose an option to proceed
+amazonqFeatureDev.placeholder.after_code_generation=Choose an option to proceed
 amazonqFeatureDev.placeholder.after_monthly_limit=Chat input is disabled
 amazonqFeatureDev.placeholder.closed_session=Open a new chat tab to continue
 amazonqFeatureDev.placeholder.context_gathering_complete=Gathering context...
 amazonqFeatureDev.placeholder.generating_code=Generating code...
 amazonqFeatureDev.placeholder.new_plan=Describe your task or issue in as much detail as possible
-amazonqFeatureDev.placeholder.provide_code_feedback=Feedback, comments ...
+amazonqFeatureDev.placeholder.provide_code_feedback=Provide feedback or comments
 amazonqFeatureDev.placeholder.write_new_prompt=Write a new prompt
 apprunner.action.configure=Configure Service
 apprunner.action.create.service=Create Service...
