--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -553,7 +553,7 @@ code.aws.workspaces=Amazon CodeCatalyst
 code.aws.workspaces.short=Dev Environments
 codemodernizer.builderrordialog.description.title=Error occurred when building your project
 codemodernizer.chat.form.user_selection.item.choose_module=Choose a module to transform
-codemodernizer.chat.form.user_selection.item.choose_skip_tests_flag=Choose to skip tests
+codemodernizer.chat.form.user_selection.item.choose_skip_tests_option=Choose to skip unit tests
 codemodernizer.chat.form.user_selection.item.choose_target_version=Choose the target code version
 codemodernizer.chat.form.user_selection.title=Q - Code transformation
 codemodernizer.chat.message.absolute_path_detected=I detected {0} potential absolute file path(s) in your {1} file: **{2}**. Absolute file paths might cause issues when I build your code. Any errors will show up in the build log.
@@ -596,7 +596,7 @@ codemodernizer.chat.message.hil.trying_resume=Trying to resume transformation wi
 codemodernizer.chat.message.hil.user_rejected=I'll continue upgrading your module. When I'm done, you can review the dependency error in the Transformation summary.
 codemodernizer.chat.message.local_build_begin=I'm building your module. This can take up to 10 minutes, depending on the size of your module.
 codemodernizer.chat.message.local_build_failed=Sorry, I couldn't run the Maven clean install command to build your module.
-codemodernizer.chat.message.local_build_success=I was able to build your project and will start uploading your code.
+codemodernizer.chat.message.local_build_success=I was able to build your module and will start uploading your code.
 codemodernizer.chat.message.result.fail=Sorry, I ran into an issue during the transformation. Please try again.
 codemodernizer.chat.message.result.fail_initial_build=I am having trouble building your project in the secure build environment and couldn't complete the transformation.
 codemodernizer.chat.message.result.fail_initial_build_no_build_log=I am having trouble building your project in the secure build environment: {0}.
@@ -605,7 +605,10 @@ codemodernizer.chat.message.result.partially_success=I upgraded part of your cod
 codemodernizer.chat.message.result.success=I successfully upgraded your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated.
 codemodernizer.chat.message.result.zip_too_large=Sorry, your project size exceeds the Amazon Q Code Transformation upload limit of 2GB.
 codemodernizer.chat.message.resume_ongoing=I'm still transforming your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
-codemodernizer.chat.message.skip_tests=Amazon Q uses 'mvn verify' to build your project. You can skip running tests to reduce the build time.
+codemodernizer.chat.message.skip_tests=I will build your module using `mvn test` by default. If you would like to skip running unit tests, I will use `mvn test-compile`.
+codemodernizer.chat.message.skip_tests_form.do_not_skip=Do not skip unit tests
+codemodernizer.chat.message_skip_tests_form.response=Ok, I will {0} when building your module.
+codemodernizer.chat.message.skip_tests_form.skip=Skip unit tests
 codemodernizer.chat.message.transform_begin=I'm starting to transform your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.transform_cancelled_by_user=I cancelled your transformation. If you want to start another transformation, choose **Start a new transformation**.
 codemodernizer.chat.message.transform_in_progress=If I run into any issues, I might pause the transformation to get input from you on how to proceed.
