--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -607,7 +607,7 @@ codemodernizer.chat.message.result.zip_too_large=Sorry, your project size exceed
 codemodernizer.chat.message.resume_ongoing=I'm still transforming your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.skip_tests=I will build your module using `mvn test` by default. If you would like to skip running unit tests, I will use `mvn test-compile`.
 codemodernizer.chat.message.skip_tests_form.do_not_skip=Do not skip unit tests
-codemodernizer.chat.message_skip_tests_form.response=Ok, I will {0} when building your module.
+codemodernizer.chat.message.skip_tests_form.response=Ok, I will {0} when building your module.
 codemodernizer.chat.message.skip_tests_form.skip=Skip unit tests
 codemodernizer.chat.message.transform_begin=I'm starting to transform your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.transform_cancelled_by_user=I cancelled your transformation. If you want to start another transformation, choose **Start a new transformation**.
