--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -615,11 +615,13 @@ codemodernizer.chat.message.upload_failed_other=Sorry, I was unable to upload yo
 codemodernizer.chat.message.upload_failed_ssl_error=Sorry, I was unable to upload your project. This might have been caused by your IDE not trusting the certificate of your HTTP proxy. Ensure all certificates for your proxy client have been configured in your IDE, and then retry transformation.
 codemodernizer.chat.message.upload_failed_url_expired=Sorry, I couldn't upload your project to begin the transformation. The Amazon S3 pre-signed URL used to upload your code expired after 30 minutes. This might have been caused by delays introduced by intermediate services in your network infrastructure.\n\nCheck your network configuration for services that might be causing delays. If the issue persists, you might need to allow list the following Amazon S3 bucket: 'amazonq-code-transformation-us-east-1-c6160f047e0.s3.amazonaws.com'.
 codemodernizer.chat.message.validation.check_eligible_projects=I'm checking for open projects that are eligible for Code Transformation.
-codemodernizer.chat.message.validation.check_passed=I can upgrade your Java {0} module. To start the transformation, I need some information from you. Choose the module you want to upgrade and the target code version to upgrade to. Then, choose **Confirm**.\n\nIf you do not see the module you want to transform, you might need to configure your project so I can find it. Go to **File** and then **Project Structure** and make sure the correct JDK is selected in the SDK field.
+codemodernizer.chat.message.validation.check_passed=I can upgrade your Java module. To start the transformation, I need some information from you. Choose the module you want to upgrade and the target code version to upgrade to. Then, choose **Confirm**.\n\nIf you do not see the module you want to transform, you might need to configure your project so that I can find it. Go to File and choose Project Structure. In the Projects tab, set the correct project JDK and the correct language level. In the Modules tab, set the correct module JDK and the correct language level.
 codemodernizer.chat.message.validation.error.more_info=For more information, see the [Amazon Q documentation]({0}).
 codemodernizer.chat.message.validation.error.no_pom=Sorry, I couldn't find a module that I can upgrade. I couldn't find a pom.xml file in any of your open projects. Currently, I can only upgrade Java 8 or Java 11 projects built on Maven.
-codemodernizer.chat.message.validation.error.other=Sorry, I couldn't find a module that I can upgrade. Currently, I can only upgrade Java 8 or Java 11 projects built on Maven. If you have a Java 8 or Java 11 module in your workspace, you might need to configure your project so I can find it. In your **Project Structure** settings, make sure your Modules configuration is correct.
-codemodernizer.chat.message.validation.error.unsupported_java_version=Sorry, I couldn't find a module that I can upgrade. Currently, I can only upgrade Java 8 or Java 11 modules built on Maven. If you have a Java 8 or Java 11 module in your workspace, you might need to configure your project so I can find it. Go to **File** and then **Project Structure** and make sure the correct JDK is selected in the SDK field and the module Language level setting is set to 8 or 11.
+codemodernizer.chat.message.validation.error.other=Sorry, I couldn't find a module that I can upgrade. Currently, I can only upgrade Java 8 or Java 11 projects built on Maven. If you have a Java 8 or Java 11 module in your workspace, you might need to configure your project so that I can find it. Go to File and choose Project Structure. In the Projects tab, set the correct project JDK and the correct language level. In the Modules tab, set the correct module JDK and the correct language level.
+codemodernizer.chat.message.validation.error.unsupported_java_version=Sorry, I couldn't find a module that I can upgrade. Currently, I can only upgrade Java 8 or Java 11 modules built on Maven. If you have a Java 8 or Java 11 module in your workspace, you might need to configure your project so that I can find it. Go to File and choose Project Structure. In the Projects tab, set the correct project JDK and the correct language level. In the Modules tab, set the correct module JDK and the correct language level.
+codemodernizer.chat.message.validation.no_jdk=I couldn't build your project with your current JDK configuration. To update your JDK, go to File and choose Project Structure. In the Projects tab, set the correct project JDK in the SDK field. In the Modules tab, set the correct module JDK in the SDK field.
+codemodernizer.chat.prompt.label.dependency_current_version=Current version
 codemodernizer.chat.prompt.label.dependency_name=Dependency name
 codemodernizer.chat.prompt.label.dependency_selected_version=Target version
 codemodernizer.chat.prompt.label.module=Module
@@ -627,11 +629,11 @@ codemodernizer.chat.prompt.label.target_version=Target JDK version
 codemodernizer.chat.prompt.stop_transform=Stop transformation
 codemodernizer.chat.prompt.title.dependency_details=Dependency details
 codemodernizer.chat.prompt.title.details=Transformation details
-codemodernizer.explorer.show_active_job_history=Show job details
-codemodernizer.explorer.show_active_job_history_description=View your Code Transform active job details in the ToolWindow
-codemodernizer.explorer.show_job_history=Show job history
-codemodernizer.explorer.show_job_history_description=View your code transform job history and job details
+codemodernizer.explorer.show_job_status=Show job status
+codemodernizer.explorer.show_job_status_description=View job status
 codemodernizer.explorer.show_transformation_plan_title=View your code transformation plan
+codemodernizer.explorer.show_transformation_status=Show transformation status
+codemodernizer.explorer.show_transformation_status_description=View transformation status
 codemodernizer.explorer.show_transformation_summary_title=View your code transformation summary
 codemodernizer.explorer.stop_migration_job=Stop Transformation
 codemodernizer.file.invalid_pom_version=Amazon Q experienced an issue upgrading this dependency version. Use Amazon Q chat to upgrade the version of this dependency to a Java 17 compatible version.
@@ -707,6 +709,7 @@ codemodernizer.notification.warn.unknown_start_failure=Amazon Q could not begin 
 codemodernizer.notification.warn.unknown_status_response=Amazon Q could not complete the transformation. Try starting the transformation again.
 codemodernizer.notification.warn.upload_failed=Amazon Q could not upload your project. Try starting the transformation again. {0}
 codemodernizer.notification.warn.upload_failed_expired_credentials.content=Unable to upload results as your credentials expired, please reauthenticate to Q and try again.
+codemodernizer.notification.warn.validation.no_jdk=Amazon Q couldn't build your project with your JDK configuration. Go to File and choose Project Structure to update your project SDK and module SDK.
 codemodernizer.notification.warn.view_build_log_failed.content=Unable to display the failure build log due to an error.
 codemodernizer.notification.warn.view_build_log_failed.title=Unable to display failure build log
 codemodernizer.notification.warn.view_diff_failed.content=Amazon Q could not download and parse the diff with your upgraded code. {0}
@@ -730,6 +733,7 @@ codemodernizer.toolwindow.banner.job_starting=Job is starting.
 codemodernizer.toolwindow.banner.no_ongoing_job=No job ongoing.
 codemodernizer.toolwindow.banner.run_scan_complete=All steps of transformation successful
 codemodernizer.toolwindow.banner.run_scan_info=Select 'Transform' in toolbar to upgrade this package.
+codemodernizer.toolwindow.job_status.header=Job status
 codemodernizer.toolwindow.label=Transformation Hub - {0}
 codemodernizer.toolwindow.label_no_job=Transformation Hub
 codemodernizer.toolwindow.problems_mvn_window_not_found=Unable to display Code Transform results as the Maven window cannot be fetched.
@@ -753,7 +757,6 @@ codemodernizer.toolwindow.table.header.job_id=Job Id
 codemodernizer.toolwindow.table.header.module_name=Module name
 codemodernizer.toolwindow.table.header.run_length=Job running time
 codemodernizer.toolwindow.table.header.status=Status
-codemodernizer.toolwindow.transformation.history.header=Transformation job history
 codemodernizer.toolwindow.transformation.progress.header=Transformation progress
 codemodernizer.toolwindow.transformation.progress.running_time=Running time: {0}
 codewhisperer.actions.connect_github.title=Connect with Us on GitHub
