--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -605,9 +605,9 @@ codemodernizer.chat.message.result.partially_success=I upgraded part of your cod
 codemodernizer.chat.message.result.success=I successfully upgraded your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated.
 codemodernizer.chat.message.result.zip_too_large=Sorry, your project size exceeds the Amazon Q Code Transformation upload limit of 2GB.
 codemodernizer.chat.message.resume_ongoing=I'm still transforming your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
-codemodernizer.chat.message.skip_tests=I will build your module using `mvn test` by default. If you would like to skip running unit tests, I will use `mvn test-compile`.
-codemodernizer.chat.message.skip_tests_form.do_not_skip=Do not skip unit tests
-codemodernizer.chat.message.skip_tests_form.response=Ok, I will {0} when building your module.
+codemodernizer.chat.message.skip_tests=I will build your module using `mvn test` by default. If you would like me to build your module without running unit tests, I will use `mvn test-compile`.
+codemodernizer.chat.message.skip_tests_form.response=Okay, I will {0} when building your module.
+codemodernizer.chat.message.skip_tests_form.run_tests=Run unit tests
 codemodernizer.chat.message.skip_tests_form.skip=Skip unit tests
 codemodernizer.chat.message.transform_begin=I'm starting to transform your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.transform_cancelled_by_user=I cancelled your transformation. If you want to start another transformation, choose **Start a new transformation**.
