fix(amazonqFeatureDev): include cancellation token

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -57,6 +57,8 @@ amazonqFeatureDev.code_generation.notification_message=Your code suggestions fro
 amazonqFeatureDev.code_generation.notification_open_link=Open chat
 amazonqFeatureDev.code_generation.notification_title=Amazon Q Developer Agent for software development
 amazonqFeatureDev.code_generation.provide_code_feedback=How can I improve the code for your use case?
+amazonqFeatureDev.code_generation.stopping_code_generation=Stopping code generation ...
+amazonqFeatureDev.code_generation.stopped_code_generation=You've stopped code generation.
 amazonqFeatureDev.code_generation.updated_code=Okay, I updated your code files. Would you like to work on another task?
 amazonqFeatureDev.content_length.error_text=The folder you selected is too large for me to use as context. Please choose a smaller folder to work on. For more information on quotas, see the [Amazon Q Developer documentation](https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/software-dev.html#quotas). 
 amazonqFeatureDev.error_text=Sorry, we encountered a problem when processing your request.
