--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -66,6 +66,7 @@ amazonqFeatureDev.exception.export_parsing_error=I'm sorry, I'm having trouble p
 amazonqFeatureDev.exception.guardrails=I'm sorry, I'm having trouble generating your code. Please try again.
 amazonqFeatureDev.exception.insert_code_failed=Failed to insert code changes
 amazonqFeatureDev.exception.monthly_limit_error=You've reached the monthly quota for the Amazon Q agent for software development. You can try again next month. For more information on usage limits, see the [Amazon Q Developer pricing page](https://aws.amazon.com/q/developer/pricing/).
+amazonqFeatureDev.exception.no_change_required_exception=I'm sorry, I ran into an issue while trying to generate your code.\n\n- `/dev` can generate code to make a change in your project. Provide a detailed description of the new feature or code changes you want to make, including the specifics of what the code should achieve.\n\n- To ask me to explain, debug, or optimize your code, you can close this chat tab to start a new conversation.
 amazonqFeatureDev.exception.open_diff_failed=Failed to open diff
 amazonqFeatureDev.exception.prompt_refusal=I'm sorry, I can't generate code for your request. Please make sure your message and code files comply with the [AWS Responsible AI Policy](https://aws.amazon.com/machine-learning/responsible-ai/policy/).
 amazonqFeatureDev.exception.request_failed=Request failed
