skip getPlan for SQL conversions

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -759,7 +759,7 @@ codemodernizer.toolwindow.problems_window_not_found=Unable to display Code Trans
 codemodernizer.toolwindow.progress.building=Build uploaded code in secure build environment
 codemodernizer.toolwindow.progress.parent=Transformation progress
 codemodernizer.toolwindow.progress.planning=Generate transformation plan
-codemodernizer.toolwindow.progress.transforming=Transform your code to Java 17 using transformation plan
+codemodernizer.toolwindow.progress.transforming=Transform your code
 codemodernizer.toolwindow.progress.uploading=Uploading your code
 codemodernizer.toolwindow.scan_display=Transformation details
 codemodernizer.toolwindow.scan_in_progress=Amazon Q is scanning the project files and getting ready to start the job. To start the job, Amazon Q needs to upload the project artifacts. Once that's done, Q can start the transformation job. The estimated time for this operation ranges from a few seconds to several minutes.
@@ -768,7 +768,7 @@ codemodernizer.toolwindow.scan_in_progress.building=Amazon Q is building your co
 codemodernizer.toolwindow.scan_in_progress.failed=The step failed, fetching additional details...
 codemodernizer.toolwindow.scan_in_progress.planning=Amazon Q is analyzing your code in order to generate a transformation plan.
 codemodernizer.toolwindow.scan_in_progress.stopping=Stopping the job...
-codemodernizer.toolwindow.scan_in_progress.transforming=Amazon Q is transforming your code. Details will appear soon.
+codemodernizer.toolwindow.scan_in_progress.transforming=Amazon Q is transforming your code.
 codemodernizer.toolwindow.stop_scan=Stop job
 codemodernizer.toolwindow.table.header.date=Date
 codemodernizer.toolwindow.table.header.job_id=Job Id
