add to right click context menu

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -23,6 +23,7 @@ action.aws.toolkit.jetbrains.core.services.cwc.commands.FixCodeAction.descriptio
 action.aws.toolkit.jetbrains.core.services.cwc.commands.FixCodeAction.text = Fix Code
 action.aws.toolkit.jetbrains.core.services.cwc.commands.GenerateUnitTestsAction.description = Generates unit tests for the selected code
 action.aws.toolkit.jetbrains.core.services.cwc.commands.GenerateUnitTestsAction.text = Generate Tests (Beta)
+action.aws.toolkit.jetbrains.core.services.cwc.inline.openChat.text = Inline Chat
 action.aws.toolkit.jetbrains.core.services.cwc.commands.OptimizeCodeAction.description = Optimizes the selected code
 action.aws.toolkit.jetbrains.core.services.cwc.commands.OptimizeCodeAction.text = Optimize Code
 action.aws.toolkit.jetbrains.core.services.cwc.commands.RefactorCodeAction.description = Refactors the selected code
