--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -29,6 +29,7 @@ action.aws.toolkit.jetbrains.core.services.cwc.commands.RefactorCodeAction.descr
 action.aws.toolkit.jetbrains.core.services.cwc.commands.RefactorCodeAction.text = Refactor Code
 action.aws.toolkit.jetbrains.core.services.cwc.commands.SendToPromptAction.description = Sends selected code to chat
 action.aws.toolkit.jetbrains.core.services.cwc.commands.SendToPromptAction.text = Send to Prompt
+action.aws.toolkit.jetbrains.core.services.cwc.inline.openChat.text = Inline Chat
 action.aws.toolkit.open.arn.browser.text=Open ARN in AWS Console
 action.aws.toolkit.open.telemetry.viewer.text=View AWS Telemetry
 action.aws.toolkit.s3.open.bucket.viewer.prefixed.text=View Bucket with Prefix...
