--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1241,7 +1241,7 @@ gateway.connection.workflow.step_successful=\nStep completed successfully\n
 general.add.another=Add another
 general.auth.reauthenticate=Reauthenticate
 general.auth.network.error=Network Error
-general.auth.network.error.message=Failed to update connection due to networking issues
+general.auth.network.error.message=Failed to refresh connection due to network issues
 general.cancel=Cancel
 general.close_button=Close
 general.configure_button=Configure
