--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -564,7 +564,7 @@ code.aws.workspaces.short=Dev Environments
 codemodernizer.builderrordialog.description.title=Error occurred when building your project
 codemodernizer.chat.form.user_selection.item.choose_module=Choose a module to transform
 codemodernizer.chat.form.user_selection.item.choose_skip_tests_option=Choose to skip unit tests
-codemodernizer.chat.form.user_selection.item.choose_sql_metadata_file=Next, I need the zipped metadata file from your schema conversion. You can download the metadata by going to your migration project in the AWS DMS console. Open the schema conversion and choose **Convert the embedded SQL in your application**. You can download the metadata from Amazon S3 in the {schema-conversion-project}/ directory.
+codemodernizer.chat.form.user_selection.item.choose_sql_metadata_file=Okay, I can convert the embedded SQL code for your Oracle to PostgreSQL migration. To get started, upload the zipped metadata file from your schema conversion in AWS DMS. To retrieve the metadata file: \n1. Open your database migration project in the AWS DMS console. \n2. Open the schema conversion and choose **Convert the embedded SQL in your application**. \n3. Choose the link to Amazon S3 console. You can download the metadata file from the {schema-conversion-project}/ directory.
 codemodernizer.chat.form.user_selection.item.choose_target_version=Choose the target code version
 codemodernizer.chat.form.user_selection.title=Q - Code transformation
 codemodernizer.chat.message.absolute_path_detected=I detected {0} potential absolute file path(s) in your {1} file: **{2}**. Absolute file paths might cause issues when I build your code. Any errors will show up in the build log.
@@ -575,12 +575,13 @@ codemodernizer.chat.message.button.hil_cancel=Cancel
 codemodernizer.chat.message.button.hil_submit=Submit
 codemodernizer.chat.message.button.open_file=Open file
 codemodernizer.chat.message.button.open_transform_hub=Open Transformation Hub
-codemodernizer.chat.message.button.select=Select
+codemodernizer.chat.message.button.select_sql_metadata=Upload metadata file
 codemodernizer.chat.message.button.stop_transform=Stop transformation
 codemodernizer.chat.message.button.view_build=View build progress
 codemodernizer.chat.message.button.view_diff=View diff
 codemodernizer.chat.message.button.view_failure_build_log=View Failure Build Log
 codemodernizer.chat.message.button.view_summary=View summary
+codemodernizer.chat.message.choose_objective=Enter "language upgrade" or "SQL conversion"
 codemodernizer.chat.message.download_failed_client_instructions_expired=Your transformation is not available anymore. Your code and transformation summary are deleted 24 hours after the transformation completes. Please try starting the transformation again.
 codemodernizer.chat.message.download_failed_invalid_artifact=Sorry, I was unable to find your {0}. Artifacts are deleted after 24 hours. Please try starting the transformation again.
 codemodernizer.chat.message.download_failed_other=Sorry, I ran into an issue while trying to download your {0}. Please try again. {1}
@@ -613,14 +614,16 @@ codemodernizer.chat.message.result.fail=Sorry, I ran into an issue during the tr
 codemodernizer.chat.message.result.fail_initial_build=I am having trouble building your project in the secure build environment and couldn't complete the transformation.
 codemodernizer.chat.message.result.fail_initial_build_no_build_log=I am having trouble building your project in the secure build environment: {0}.
 codemodernizer.chat.message.result.fail_with_known_reason=Sorry, I couldn''t complete the transformation. {0}
-codemodernizer.chat.message.result.partially_success=I upgraded part of your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated and the errors that prevented a complete transformation.
-codemodernizer.chat.message.result.success=I successfully upgraded your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated.
+codemodernizer.chat.message.result.partially_success=I transformed part of your code. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated and the errors that prevented a complete transformation.
+codemodernizer.chat.message.result.success=I successfully transformed your code. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated.
 codemodernizer.chat.message.result.zip_too_large=Sorry, your project size exceeds the Amazon Q Code Transformation upload limit of 2GB.
 codemodernizer.chat.message.resume_ongoing=I'm still transforming your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.skip_tests=I will build your module using `mvn test` by default. If you would like me to build your module without running unit tests, I will use `mvn test-compile`.
 codemodernizer.chat.message.skip_tests_form.response=Okay, I will {0} when building your module.
 codemodernizer.chat.message.skip_tests_form.run_tests=Run unit tests
 codemodernizer.chat.message.skip_tests_form.skip=Skip unit tests
+codemodernizer.chat.message.sql_metadata_success=I retrieved the following information from the schema conversion metadata you provided:
+codemodernizer.chat.message.sql_module_schema_prompt=To continue, choose the module and schema for this transformation.
 codemodernizer.chat.message.transform_begin=I'm starting to transform your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.transform_cancelled_by_user=I cancelled your transformation. If you want to start another transformation, choose **Start a new transformation**.
 codemodernizer.chat.message.transform_in_progress=If I run into any issues, I might pause the transformation to get input from you on how to proceed.
@@ -631,7 +634,7 @@ codemodernizer.chat.message.upload_failed_http_error=Sorry, I couldn''t upload y
 codemodernizer.chat.message.upload_failed_other=Sorry, I was unable to upload your project due to an unexpected failure. {0}
 codemodernizer.chat.message.upload_failed_ssl_error=Sorry, I was unable to upload your project. This might have been caused by your IDE not trusting the certificate of your HTTP proxy. Ensure all certificates for your proxy client have been configured in your IDE, and then retry transformation.
 codemodernizer.chat.message.upload_failed_url_expired=Sorry, I couldn't upload your project to begin the transformation. The Amazon S3 pre-signed URL used to upload your code expired after 30 minutes. This might have been caused by delays introduced by intermediate services in your network infrastructure.\n\nCheck your network configuration for services that might be causing delays. If the issue persists, you might need to allow list the following Amazon S3 bucket: 'amazonq-code-transformation-us-east-1-c6160f047e0.s3.amazonaws.com'.
-codemodernizer.chat.message.validation.check_eligible_projects=I'm checking for open projects that are eligible for Code Transformation.
+codemodernizer.chat.message.validation.check_eligible_projects=Checking for eligible projects...
 codemodernizer.chat.message.validation.check_passed=I can upgrade your Java module. To start the transformation, I need some information from you. Choose the module you want to upgrade and the target code version to upgrade to. Then, choose **Confirm**.\n\nIf you do not see the module you want to transform, you might need to configure your project so that I can find it. Go to File and choose Project Structure. In the Projects tab, set the correct project JDK and language level. In the Modules tab, set the correct module JDK and language level.
 codemodernizer.chat.message.validation.error.invalid_sct=It looks like the .sct file you provided isn't valid. Make sure that you've uploaded the .zip file you retrieved from your schema conversion in AWS DMS.
 codemodernizer.chat.message.validation.error.invalid_source_db=I can only convert SQL for migrations from an Oracle source database. The provided .sct file indicates another source database for this migration.
@@ -688,7 +691,7 @@ codemodernizer.migration_plan.substeps.description_succeed=Build succeeded
 codemodernizer.migration_summary.header.title=Transformation summary
 codemodernizer.notification.info.download.started.content=Downloading the updated code
 codemodernizer.notification.info.download.started.title=Download Started
-codemodernizer.notification.info.modernize_complete.content=Amazon Q upgraded your code to Java 17. You can review the diff to see the proposed changes and accept or reject them. The transformation summary has details about the files that were updated.
+codemodernizer.notification.info.modernize_complete.content=Amazon Q transformed your code. You can review the diff to see the proposed changes and accept or reject them. The transformation summary has details about the files that were updated.
 codemodernizer.notification.info.modernize_complete.title=Transform Complete
 codemodernizer.notification.info.modernize_complete.view_diff=View diff
 codemodernizer.notification.info.modernize_complete.view_summary=View transformation summary
@@ -696,7 +699,7 @@ codemodernizer.notification.info.modernize_failed.connection_failed=Amazon Q cou
 codemodernizer.notification.info.modernize_failed.title=Transformation failed
 codemodernizer.notification.info.modernize_failed.unknown_failure_reason=Unknown failure reason
 codemodernizer.notification.info.modernize_ongoing.view_status=View status
-codemodernizer.notification.info.modernize_partial_complete.content=Amazon Q upgraded part of your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated and the errors that prevented a complete transformation.
+codemodernizer.notification.info.modernize_partial_complete.content=Amazon Q transformed part of your code. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated and the errors that prevented a complete transformation.
 codemodernizer.notification.info.modernize_partial_complete.title=Transformation partially successful!
 codemodernizer.notification.info.transformation_resume.content=Amazon Q was unable to resume polling for the job you started before closing the project.
 codemodernizer.notification.info.transformation_resume.title=Unable to resume polling for job updates.
