--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -42,7 +42,10 @@ action.q.openchat.text=Open Chat Panel
 amazonqChat.project_context.index_in_progress=By the way, I'm still indexing this project for full context from your workspace. I may have a better response in a few minutes when it's complete if you'd like to try again then.
 amazonqFeatureDev.chat_message.ask_for_new_task=What new task would you like to work on?
 amazonqFeatureDev.chat_message.closed_session=Okay, I've ended this chat session. You can open a new tab to chat or start another workflow.
+amazonqFeatureDev.chat_message.devFileInRepository=I noticed that your repository has a `devfile.yaml`. Would you like me to use the devfile to build and test your project as I generate code?\n\nFor more information on using devfiles to improve code generation, see the [Amazon Q Developer documentation](https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/software-dev.html).
+amazonqFeatureDev.chat_message.generate_dev_file=For future tasks in this project, I can create a devfile to build and test code as I generate it. This can improve the quality of generated code. To allow me to create a devfile, choose **Generate devfile to build code**.
 amazonqFeatureDev.chat_message.requesting_changes=Requesting changes ...
+amazonqFeatureDev.chat_message.setting_updated=I've updated your settings so I can run code and test commands based on your devfile for this project. You can update this setting under **Amazon Q: Allow Q /dev to run code and test commands**.
 amazonqFeatureDev.chat_message.start_code_generation=Okay, I'll generate code for that. This might take a few minutes.\n\nYou can navigate away from this chat, but please keep this tab open. I'll notify you when I'm done.
 amazonqFeatureDev.chat_message.start_code_generation_retry=Okay, I'll generate new code. This might take a few minutes.\n\nYou can navigate away from this chat, but please keep this tab open. I'll notify you when I'm done.
 amazonqFeatureDev.chat_message.uploading_code=Uploading code...
@@ -79,7 +82,10 @@ amazonqFeatureDev.exception.throttling=I'm sorry, I'm experiencing high demand a
 amazonqFeatureDev.exception.upload_code=I'm sorry, I couldn't upload your workspace artifacts to Amazon S3 to help you with this task. You might need to allow access to the S3 bucket. For more information, see the [Amazon Q documentation](https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/security_iam_manage-access-with-policies.html#data-perimeters) or contact your network or organization administrator.
 amazonqFeatureDev.exception.upload_url_expiry=I'm sorry, I wasn't able to generate code. A connection timed out or became unavailable. Please try again or check the following:\n\n- Exclude non-essential files in your workspace's `.gitignore`.\n\n- Check that your network connection is stable.
 amazonqFeatureDev.follow_instructions_for_authentication=Follow instructions to re-authenticate ...
+amazonqFeatureDev.follow_up.accept_for_project=Yes, use my devfile for this project
 amazonqFeatureDev.follow_up.close_session=No, thanks
+amazonqFeatureDev.follow_up.decline_for_project=No, thanks
+amazonqFeatureDev.follow_up.generate_dev_file=Generate devfile to build code
 amazonqFeatureDev.follow_up.incorrect_source_folder=The folder you chose isn't in your open workspace folder. You can add this folder to your workspace, or choose a folder in your open workspace.
 amazonqFeatureDev.follow_up.insert_code=Accept code
 amazonqFeatureDev.follow_up.modified_source_folder=Changed source root to: {0}
