fix(amazonq): Ensure file tree displays all files with correct state after continuing.

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -82,8 +82,8 @@ amazonqFeatureDev.follow_instructions_for_authentication=Follow instructions to 
 amazonqFeatureDev.follow_up.close_session=No, thanks
 amazonqFeatureDev.follow_up.continue=Continue
 amazonqFeatureDev.follow_up.incorrect_source_folder=The folder you chose isn't in your open workspace folder. You can add this folder to your workspace, or choose a folder in your open workspace.
-amazonqFeatureDev.follow_up.insert_all_code=Accept all code
-amazonqFeatureDev.follow_up.insert_remaining_code=Accept remaining code
+amazonqFeatureDev.follow_up.insert_all_code=Accept all changes
+amazonqFeatureDev.follow_up.insert_remaining_code=Accept remaining changes
 amazonqFeatureDev.follow_up.modified_source_folder=Changed source root to: {0}
 amazonqFeatureDev.follow_up.modify_source_folder=Select files for context
 amazonqFeatureDev.follow_up.new_task=Yes, I have another task
